force-app/main/default/objects/FifthSetConfirm__c/fields/ManagementCompanyNameKana__c.field-meta.xml
<CustomField>
    <fullName>ManagementCompanyNameKana__c</fullName>
    <label>管理会社_名前カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>