force-app/main/default/objects/FifthSetConfirm__c/fields/MonthlyVariableCost2Title__c.field-meta.xml
<CustomField>
    <fullName>MonthlyVariableCost2Title__c</fullName>
    <label>月次変動費2タイトル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>