force-app/main/default/objects/FifthSetConfirm__c/fields/MonthlyVariableCost6Title__c.field-meta.xml
<CustomField>
    <fullName>MonthlyVariableCost6Title__c</fullName>
    <label>月次変動費6タイトル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>