force-app/main/default/objects/FifthSetConfirm__c/fields/MoveScheduledDateCheckResult__c.field-meta.xml
<CustomField>
    <fullName>MoveScheduledDateCheckResult__c</fullName>
    <formula>IF ( ISBLANK( NewMatter__c ) , &quot;NG&quot;,
 IF(
     ContractStartDate__c   =  NewMatter__r.DecisionMoveDesiredDate__c ,
   &quot;OK&quot;,
   &quot;NG&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>入居予定日チェック結果</label>
    <type>Text</type>
</CustomField>