force-app/main/default/objects/FifthSetConfirm__c/fields/NewMatterRealEstateName__c.field-meta.xml
<CustomField>
    <fullName>NewMatterRealEstateName__c</fullName>
    <formula>NewMatter__r.DecisionRealEstateName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>物件名</label>
    <type>Text</type>
</CustomField>