force-app/main/default/objects/FifthSetConfirm__c/fields/NGComment__c.field-meta.xml
<CustomField>
    <fullName>NGComment__c</fullName>
    <label>NGコメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>