force-app/main/default/objects/FifthSetConfirm__c/fields/NGConfirmComment__c.field-meta.xml
<CustomField>
    <fullName>NGConfirmComment__c</fullName>
    <label>NG確認コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>