force-app/main/default/objects/FifthSetConfirm__c/fields/OtherBillingAmount1__c.field-meta.xml
<CustomField>
    <fullName>OtherBillingAmount1__c</fullName>
    <label>請求_その他1金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>