force-app/main/default/objects/FifthSetConfirm__c/fields/OtherBillingAmount1Account__c.field-meta.xml
<CustomField>
    <fullName>OtherBillingAmount1Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>その他1請求金額_送金先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>FifthSetConfirmBankAccountRelation14</relationshipName>
    <type>Lookup</type>
</CustomField>