force-app/main/default/objects/FifthSetConfirm__c/fields/OtherBillingAmount2__c.field-meta.xml
<CustomField>
    <fullName>OtherBillingAmount2__c</fullName>
    <label>請求_その他2金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>