force-app/main/default/objects/FifthSetConfirm__c/fields/OtherBillingAmount2Account__c.field-meta.xml
<CustomField>
    <fullName>OtherBillingAmount2Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>その他2請求金額_送金先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>FifthSetConfirmBankAccountRelation15</relationshipName>
    <type>Lookup</type>
</CustomField>