force-app/main/default/objects/FifthSetConfirm__c/fields/OtherBillingAmount3Account__c.field-meta.xml
<CustomField>
    <fullName>OtherBillingAmount3Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>その他3請求金額_送金先口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>FifthSetConfirmBankAccountRelation16</relationshipName>
    <type>Lookup</type>
</CustomField>