force-app/main/default/objects/FifthSetConfirm__c/fields/OtherBillingAmount4__c.field-meta.xml
<CustomField>
    <fullName>OtherBillingAmount4__c</fullName>
    <label>請求_その他4金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>