force-app/main/default/objects/FifthSetConfirm__c/fields/OtherBillingExpenseItems4__c.field-meta.xml
<CustomField>
    <fullName>OtherBillingExpenseItems4__c</fullName>
    <label>請求_その他4費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>