force-app/main/default/objects/FifthSetConfirm__c/fields/OtherBillingExpenseItems5__c.field-meta.xml
<CustomField>
    <fullName>OtherBillingExpenseItems5__c</fullName>
    <label>請求_その他5費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>