force-app/main/default/objects/FifthSetConfirm__c/fields/OtherBillingExpenseItems6__c.field-meta.xml
<CustomField>
    <fullName>OtherBillingExpenseItems6__c</fullName>
    <label>請求_その他6費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>