force-app/main/default/objects/FifthSetConfirm__c/fields/OtherBillingTaxCategory2__c.field-meta.xml
<CustomField>
    <fullName>OtherBillingTaxCategory2__c</fullName>
    <label>その他2請求税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxCategoryBpo</valueSetName>
    </valueSet>
</CustomField>