force-app/main/default/objects/FifthSetConfirm__c/fields/Owner1__c.field-meta.xml
<CustomField>
    <fullName>Owner1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>家主</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>5点確定 (家主1)</relationshipLabel>
    <relationshipName>FifthSetConfirmOwner1</relationshipName>
    <type>Lookup</type>
</CustomField>