force-app/main/default/objects/FifthSetConfirm__c/fields/Owner2__c.field-meta.xml
<CustomField>
    <fullName>Owner2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>家主2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>5点確定 (家主2)</relationshipLabel>
    <relationshipName>FifthSetConfirmOwner2</relationshipName>
    <type>Lookup</type>
</CustomField>