force-app/main/default/objects/FifthSetConfirm__c/fields/Owner3__c.field-meta.xml
<CustomField>
    <fullName>Owner3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>家主3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>5点確定 (家主3)</relationshipLabel>
    <relationshipName>FifthSetConfirmOwner3</relationshipName>
    <type>Lookup</type>
</CustomField>