force-app/main/default/objects/FifthSetConfirm__c/fields/OwnerCompanySummaryUrl__c.field-meta.xml
<CustomField>
    <fullName>OwnerCompanySummaryUrl__c</fullName>
    <label>家主_会社概要のURL</label>
    <type>Url</type>
</CustomField>