force-app/main/default/objects/FifthSetConfirm__c/fields/OwnerInfoInfoId3__c.field-meta.xml
<CustomField>
    <fullName>OwnerInfoInfoId3__c</fullName>
    <externalId>true</externalId>
    <label>家主3情報_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>