force-app/main/default/objects/FifthSetConfirm__c/fields/OwnerInfoInfoId4__c.field-meta.xml
<CustomField>
    <fullName>OwnerInfoInfoId4__c</fullName>
    <externalId>true</externalId>
    <label>家主4情報_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>