force-app/main/default/objects/FifthSetConfirm__c/fields/OwnerInfoInfoId5__c.field-meta.xml
<CustomField>
    <fullName>OwnerInfoInfoId5__c</fullName>
    <externalId>true</externalId>
    <label>家主5情報_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>