force-app/main/default/objects/FifthSetConfirm__c/fields/OwnerName4__c.field-meta.xml
<CustomField>
    <fullName>OwnerName4__c</fullName>
    <label>賃貸人4名前</label>
    <length>255</length>
    <type>Text</type>
</CustomField>