force-app/main/default/objects/FifthSetConfirm__c/fields/OwnerName5__c.field-meta.xml
<CustomField>
    <fullName>OwnerName5__c</fullName>
    <label>賃貸人5名前</label>
    <length>255</length>
    <type>Text</type>
</CustomField>