force-app/main/default/objects/FifthSetConfirm__c/fields/OwnerNameKana4__c.field-meta.xml
<CustomField>
    <fullName>OwnerNameKana4__c</fullName>
    <label>家主4_名前カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>