force-app/main/default/objects/FifthSetConfirm__c/fields/OwnerNameKana5__c.field-meta.xml
<CustomField>
    <fullName>OwnerNameKana5__c</fullName>
    <label>家主5_名前カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>