force-app/main/default/objects/FifthSetConfirm__c/fields/OwnerPhone2__c.field-meta.xml
<CustomField>
    <fullName>OwnerPhone2__c</fullName>
    <label>家主2_TEL</label>
    <type>Phone</type>
</CustomField>