force-app/main/default/objects/FifthSetConfirm__c/fields/OwnerPhone3__c.field-meta.xml
<CustomField>
    <fullName>OwnerPhone3__c</fullName>
    <label>家主3_TEL</label>
    <type>Phone</type>
</CustomField>