force-app/main/default/objects/FifthSetConfirm__c/fields/OwnerProxyAdress__c.field-meta.xml
<CustomField>
    <fullName>OwnerProxyAdress__c</fullName>
    <label>家主代理_住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>