force-app/main/default/objects/FifthSetConfirm__c/fields/OwnerProxyCompanySummaryUrl__c.field-meta.xml
<CustomField>
    <fullName>OwnerProxyCompanySummaryUrl__c</fullName>
    <label>家主代理_会社概要のURL</label>
    <type>Url</type>
</CustomField>