force-app/main/default/objects/FifthSetConfirm__c/fields/OwnerProxyName__c.field-meta.xml
<CustomField>
    <fullName>OwnerProxyName__c</fullName>
    <label>賃貸人代理名前</label>
    <length>255</length>
    <type>Text</type>
</CustomField>