force-app/main/default/objects/FifthSetConfirm__c/fields/OwnerZipCode2__c.field-meta.xml
<CustomField>
    <fullName>OwnerZipCode2__c</fullName>
    <label>家主2_郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>