force-app/main/default/objects/FifthSetConfirm__c/fields/PaymentTotal__c.field-meta.xml
<CustomField>
    <fullName>PaymentTotal__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>支払計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>