force-app/main/default/objects/FifthSetConfirm__c/fields/PenaltyCost2__c.field-meta.xml
<CustomField>
    <fullName>PenaltyCost2__c</fullName>
    <label>違約金2_金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>