force-app/main/default/objects/FifthSetConfirm__c/fields/PenaltyTermEnd1__c.field-meta.xml
<CustomField>
    <fullName>PenaltyTermEnd1__c</fullName>
    <label>違約金1_期間終わり</label>
    <type>Date</type>
</CustomField>