force-app/main/default/objects/FifthSetConfirm__c/fields/PenaltyTermEnd2__c.field-meta.xml
<CustomField>
    <fullName>PenaltyTermEnd2__c</fullName>
    <label>違約金2_期間終わり</label>
    <type>Date</type>
</CustomField>