force-app/main/default/objects/FifthSetConfirm__c/fields/PrepaymentParkingFeeTotal__c.field-meta.xml
<CustomField>
    <fullName>PrepaymentParkingFeeTotal__c</fullName>
    <formula>BillingNextMonthParkingFee__c    *  AfterNextMonthPrepaymentTerm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>翌月以降駐車場代前納合計額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>