force-app/main/default/objects/FifthSetConfirm__c/fields/RealEstateNameAndRoom__c.field-meta.xml
<CustomField>
    <fullName>RealEstateNameAndRoom__c</fullName>
    <formula>NewMatter__r.RealEstate__r.RealEstateName__c + &quot;　&quot; + NewMatter__r.RealEstate__r.RoomNum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>物件名＋号室</label>
    <type>Text</type>
</CustomField>