force-app/main/default/objects/FifthSetConfirm__c/fields/RenewalAdministrativeFee__c.field-meta.xml
<CustomField>
    <fullName>RenewalAdministrativeFee__c</fullName>
    <label>更新事務手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>