force-app/main/default/objects/FifthSetConfirm__c/fields/RenewalAdministrativeFeeUnit__c.field-meta.xml
<CustomField>
    <fullName>RenewalAdministrativeFeeUnit__c</fullName>
    <label>更新事務手数料_単位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RenewalAdministrativeFeeUnit</valueSetName>
    </valueSet>
</CustomField>