force-app/main/default/objects/FifthSetConfirm__c/fields/RenewalTerms__c.field-meta.xml
<CustomField>
    <fullName>RenewalTerms__c</fullName>
    <label>更新条件</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>費用発生</fullName>
            </value>
            <value>
                <fullName>自動更新</fullName>
            </value>
            <value>
                <fullName>再締結のみ</fullName>
            </value>
            <value>
                <fullName>定期借家契約</fullName>
            </value>
            <value>
                <fullName>マンスリー</fullName>
            </value>
            <value>
                <fullName>自動更新（手続き有）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>