force-app/main/default/objects/FifthSetConfirm__c/fields/RenewalTermsNote__c.field-meta.xml
<CustomField>
    <fullName>RenewalTermsNote__c</fullName>
    <label>更新条件_備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>