force-app/main/default/objects/FifthSetConfirm__c/fields/RenewalTermsProcedureIs__c.field-meta.xml
<CustomField>
    <fullName>RenewalTermsProcedureIs__c</fullName>
    <label>更新条件_手続有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>