force-app/main/default/objects/FifthSetConfirm__c/fields/RentBankAccountBank__c.field-meta.xml
<CustomField>
    <fullName>RentBankAccountBank__c</fullName>
    <label>家賃送金口座_銀行</label>
    <length>255</length>
    <type>Text</type>
</CustomField>