force-app/main/default/objects/FifthSetConfirm__c/fields/RentBankAccountContractorKana__c.field-meta.xml
<CustomField>
    <fullName>RentBankAccountContractorKana__c</fullName>
    <label>家賃送金口座_名義カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>