force-app/main/default/objects/FifthSetConfirm__c/fields/RentBankAccountId__c.field-meta.xml
<CustomField>
    <fullName>RentBankAccountId__c</fullName>
    <externalId>true</externalId>
    <label>家賃送金口座_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>