force-app/main/default/objects/FifthSetConfirm__c/fields/RentBankAccountNum__c.field-meta.xml
<CustomField>
    <fullName>RentBankAccountNum__c</fullName>
    <label>家賃送金口座_番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>