force-app/main/default/objects/FifthSetConfirm__c/fields/RentFixedCostAmount2__c.field-meta.xml
<CustomField>
    <fullName>RentFixedCostAmount2__c</fullName>
    <label>その他2_金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>