force-app/main/default/objects/FifthSetConfirm__c/fields/RentFixedCostAmount5__c.field-meta.xml
<CustomField>
    <fullName>RentFixedCostAmount5__c</fullName>
    <label>月額固定費5_金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>