force-app/main/default/objects/FifthSetConfirm__c/fields/RentFixedCostExpenseItems1__c.field-meta.xml
<CustomField>
    <fullName>RentFixedCostExpenseItems1__c</fullName>
    <label>その他1_費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>