force-app/main/default/objects/FifthSetConfirm__c/fields/RentFixedCostExpenseItems4__c.field-meta.xml
<CustomField>
    <fullName>RentFixedCostExpenseItems4__c</fullName>
    <label>月額固定費4_費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>