force-app/main/default/objects/FifthSetConfirm__c/fields/RentFixedCostTaxCategory4__c.field-meta.xml
<CustomField>
    <fullName>RentFixedCostTaxCategory4__c</fullName>
    <label>月額固定費4_税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxCategoryBpo</valueSetName>
    </valueSet>
</CustomField>