force-app/main/default/objects/FifthSetConfirm__c/fields/RentVariableVariableExpenseItems__c.field-meta.xml
<CustomField>
    <fullName>RentVariableVariableExpenseItems__c</fullName>
    <label>賃料変動_変動費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>