force-app/main/default/objects/FifthSetConfirm__c/fields/Representative__c.field-meta.xml
<CustomField>
    <fullName>Representative__c</fullName>
    <formula>Account__r.Representative__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>代表者</label>
    <type>Text</type>
</CustomField>