force-app/main/default/objects/FifthSetConfirm__c/fields/RepresentativeKana__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeKana__c</fullName>
    <formula>Account__r.RepresentativeKana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>代表者カナ</label>
    <type>Text</type>
</CustomField>