force-app/main/default/objects/FifthSetConfirm__c/fields/RoomNumCheckResult__c.field-meta.xml
<CustomField>
    <fullName>RoomNumCheckResult__c</fullName>
    <formula>IF ( ISBLANK( NewMatter__c ) , &quot;NG&quot;,
 IF(
     Room__c   =  NewMatter__r.DecisionRealEstateRoom__c ,
   &quot;OK&quot;,
   &quot;NG&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>部屋番号チェック結果</label>
    <type>Text</type>
</CustomField>