force-app/main/default/objects/FifthSetConfirm__c/fields/SeasonVariableCost1TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>SeasonVariableCost1TaxCategory__c</fullName>
    <label>季節変動費1税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>