force-app/main/default/objects/FifthSetConfirm__c/fields/SeasonVariableEndMonth__c.field-meta.xml
<CustomField>
    <fullName>SeasonVariableEndMonth__c</fullName>
    <label>季節変動_終了月</label>
    <type>Date</type>
</CustomField>