force-app/main/default/objects/FifthSetConfirm__c/fields/SeasonVariableStartMonth__c.field-meta.xml
<CustomField>
    <fullName>SeasonVariableStartMonth__c</fullName>
    <label>季節変動_開始月</label>
    <type>Date</type>
</CustomField>