force-app/main/default/objects/FifthSetConfirm__c/fields/SecurityDeposit__c.field-meta.xml
<CustomField>
    <fullName>SecurityDeposit__c</fullName>
    <label>敷金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>