force-app/main/default/objects/FifthSetConfirm__c/fields/Structure1__c.field-meta.xml
<CustomField>
    <fullName>Structure1__c</fullName>
    <label>構造1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RealEstateType</valueSetName>
    </valueSet>
</CustomField>