force-app/main/default/objects/FifthSetConfirm__c/fields/TokutokuApplyEndDate__c.field-meta.xml
<CustomField>
    <fullName>TokutokuApplyEndDate__c</fullName>
    <label>得々サービス適用終了日</label>
    <type>Date</type>
</CustomField>