force-app/main/default/objects/FifthSetConfirm__c/fields/TotalDiscountRate__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountRate__c</fullName>
    <formula>FreeRentDiscountRate__c  +  AmortisationDepreciationDiscountRate__c  +  AgencyChargesDiscountRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>割引率合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>