force-app/main/default/objects/FifthSetConfirm__c/fields/Town__c.field-meta.xml
<CustomField>
    <fullName>Town__c</fullName>
    <label>町以降</label>
    <length>255</length>
    <type>Text</type>
</CustomField>