force-app/main/default/objects/FifthSetConfirm__c/fields/TransferAmount2__c.field-meta.xml
<CustomField>
    <fullName>TransferAmount2__c</fullName>
    <label>振込み金額②</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>