force-app/main/default/objects/FifthSetConfirm__c/fields/WhatDayMinutes__c.field-meta.xml
<CustomField>
    <fullName>WhatDayMinutes__c</fullName>
    <formula>CASE(MONTH(DailyRateOccurrenceDate__c),
12,DAY(DATE(YEAR(DailyRateOccurrenceDate__c)+1,1,1) -1) - DAY( DailyRateOccurrenceDate__c ) +1,
DAY(DATE(YEAR(DailyRateOccurrenceDate__c),MONTH(DailyRateOccurrenceDate__c)+1,1) -1) - DAY( DailyRateOccurrenceDate__c ) +1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>何日分（日）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>