force-app/main/default/objects/FifthSetConfirm__c/fields/WinterCancelPenaltyContent__c.field-meta.xml
<CustomField>
    <fullName>WinterCancelPenaltyContent__c</fullName>
    <label>冬季解約違約金_内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>