force-app/main/default/objects/FifthSetConfirm__c/fields/WinterPenaltySynthesis__c.field-meta.xml
<CustomField>
    <fullName>WinterPenaltySynthesis__c</fullName>
    <formula>WinterCancelPenaltyTerm__c  &amp; 
&quot;：&quot;&amp;  
 WinterCancelPenaltyContent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>冬季違約金（合成）</label>
    <type>Text</type>
</CustomField>