force-app/main/default/objects/FifthSetConfirm__c/fields/WorkPlacePhone__c.field-meta.xml
<CustomField>
    <fullName>WorkPlacePhone__c</fullName>
    <formula>EmployeeName__r.TEL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>勤務先TEL</label>
    <type>Text</type>
</CustomField>