force-app/main/default/objects/FifthSetConfirm__c/validationRules/AgencyCommissionTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>AgencyCommissionTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( AgencyCommission__c )) , ISBLANK( TEXT(  delAgencyCommissionTaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>delAgencyCommissionTaxCategory__c</errorDisplayField>
    <errorMessage>仲介手数料税区分を入力してください</errorMessage>
</ValidationRule>