force-app/main/default/objects/FifthSetConfirm__c/validationRules/BillingNextMonthParkingFeeTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>BillingNextMonthParkingFeeTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( BillingNextMonthParkingFee__c )) , ISBLANK( TEXT( delBillingNextMonthParkingFeeTaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>delBillingNextMonthParkingFeeTaxCategory__c</errorDisplayField>
    <errorMessage>請求翌月駐車場税区分を入力してください</errorMessage>
</ValidationRule>