force-app/main/default/objects/FifthSetConfirm__c/validationRules/BillingRewardTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>BillingRewardTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( BillingReward__c )) , ISBLANK( TEXT( delBillingRewardTaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>delBillingRewardTaxCategory__c</errorDisplayField>
    <errorMessage>請求礼金税区分を入力してください</errorMessage>
</ValidationRule>