force-app/main/default/objects/FifthSetConfirm__c/validationRules/BillingThisMonthParkingFeeTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>BillingThisMonthParkingFeeTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( BillingThisMonthParkingFee__c )) , ISBLANK( TEXT( delBillingThisMonthParkingFeeTaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>delBillingThisMonthParkingFeeTaxCategory__c</errorDisplayField>
    <errorMessage>請求当月駐車場税区分を入力してください</errorMessage>
</ValidationRule>