force-app/main/default/objects/FifthSetConfirm__c/validationRules/MonthlyVariableCost6TaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>MonthlyVariableCost6TaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(  ISBLANK( MonthlyVariableCost6Title__c )) , ISBLANK( TEXT( MonthlyVariableCost6TaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>MonthlyVariableCost6TaxCategory__c</errorDisplayField>
    <errorMessage>月次変動費6税区分を入力してください</errorMessage>
</ValidationRule>