force-app/main/default/objects/FifthSetConfirm__c/validationRules/OtherBillingTaxCategory1.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherBillingTaxCategory1</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( OtherBillingAmount1__c ))  , ISBLANK(  TEXT( delOtherBillingTaxCategory1__c )  ) )</errorConditionFormula>
    <errorDisplayField>delOtherBillingTaxCategory1__c</errorDisplayField>
    <errorMessage>その他1請求金額税区分を入力してください</errorMessage>
</ValidationRule>