force-app/main/default/objects/FifthSetConfirm__c/validationRules/OtherBillingTaxCategory2.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherBillingTaxCategory2</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL(  OtherBillingAmount2__c  )) , ISBLANK( TEXT(  delOtherBillingTaxCategory2__c  ) ) )</errorConditionFormula>
    <errorDisplayField>delOtherBillingTaxCategory2__c</errorDisplayField>
    <errorMessage>その他2請求金額税区分を入力してください</errorMessage>
</ValidationRule>