force-app/main/default/objects/FifthSetConfirm__c/validationRules/OtherBillingTaxCategory3.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherBillingTaxCategory3</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL(  OtherBillingAmount3__c  )) , ISBLANK( TEXT( delOtherBillingTaxCategory3__c ) ) )</errorConditionFormula>
    <errorDisplayField>delOtherBillingTaxCategory3__c</errorDisplayField>
    <errorMessage>その他3請求金額税区分を入力してください</errorMessage>
</ValidationRule>