force-app/main/default/objects/FifthSetConfirm__c/validationRules/OtherBillingTaxCategory4.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherBillingTaxCategory4</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( OtherBillingAmount4__c )) , ISBLANK( TEXT( delOtherBillingTaxCategory4__c ) ) )</errorConditionFormula>
    <errorDisplayField>delOtherBillingTaxCategory4__c</errorDisplayField>
    <errorMessage>その他4請求金額税区分を入力してください</errorMessage>
</ValidationRule>