force-app/main/default/objects/FifthSetConfirm__c/validationRules/OtherBillingTaxCategory5.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherBillingTaxCategory5</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( OtherBillingAmount5__c )) , ISBLANK( TEXT( delOtherBillingTaxCategory5__c ) ) )</errorConditionFormula>
    <errorDisplayField>delOtherBillingTaxCategory5__c</errorDisplayField>
    <errorMessage>その他5請求金額税区分を入力してください</errorMessage>
</ValidationRule>