force-app/main/default/objects/FifthSetConfirm__c/validationRules/OtherBillingTaxCategory6.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherBillingTaxCategory6</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( OtherBillingAmount6__c )) , ISBLANK( TEXT( delOtherBillingTaxCategory6__c ) ) )</errorConditionFormula>
    <errorDisplayField>delOtherBillingTaxCategory6__c</errorDisplayField>
    <errorMessage>その他6請求金額税区分を入力してください</errorMessage>
</ValidationRule>