force-app/main/default/objects/FifthSetConfirm__c/validationRules/ParkingFeeTaxType.validationRule-meta.xml
<ValidationRule>
    <fullName>ParkingFeeTaxType</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL(  ParkingFee__c  )) , ISBLANK( TEXT(  delParkingFeeTaxType__c  ) ) )</errorConditionFormula>
    <errorDisplayField>delParkingFeeTaxType__c</errorDisplayField>
    <errorMessage>駐車場_税区分を入力してください</errorMessage>
</ValidationRule>